Bug fixed for footer and overlapping header and title

--- a/Assignment/css/app.css
+++ b/Assignment/css/app.css
@@ -20,28 +20,31 @@
         flex-direction: column;
     }
 
-    /*make the body full*/
-    /* main {
-        flex: 1;
-    } */
-
     header,
     footer {
         padding: 10px 50px;
         background: #ccc;
-        width: 100vm;
+        width: 100%;
+        box-sizing: border-box;
     }
 
+
+
     header {
-        justify-content: space-between;
-        background: #7555a0;
+        background: #ccc;
         display: flex;
         flex-direction: row;
         align-items: center;
         box-sizing: border-box;
+        justify-content: space-between;
         position: fixed;
         width: 100%;
         z-index: 10;
+    }
+
+    footer {
+        margin-top: auto;
+
     }
 
     header h1 {
@@ -53,19 +56,15 @@
     header a {
         font-family: 'Montserrat';
         font-size: 30px;
-        color: #65c5b5;
+        color: #3a715f;
         text-decoration: none;
         font-weight: 700;
     }
 
-    .header-buttons {
-        display: flex;
-    }
-
     /* Login button styling */
     .login-btn {
-        background: #693b9f;
-        color: #f2f2f2;
+        background: #4b6cff;
+        color: #fff;
         border: none;
         padding: 9px 20px;
         border-radius: 6px;
@@ -75,14 +74,13 @@
     }
 
     .login-btn:hover {
-        background: #df87ee;
-        color: #ffffff
+        background: #ff0000;
     }
 
     nav {
         padding: 5px 8px;
         width: 100%;
-        background: #693382;
+        background: #007e24;
         display: flex;
         box-sizing: border-box;
         position: fixed;
@@ -91,17 +89,16 @@
     }
 
     nav a {
-        padding: 8px 12px;
-        color: #f2f2f2;
-        text-decoration: dashed;
-        letter-spacing: 0px;
+        padding: 10px 10px;
+        color: #fff;
+        text-decoration: none;
+        letter-spacing: 2px;
         margin: 0 1px;
         border-radius: 10px;
     }
 
     nav a:hover {
-        background: #512764;
-        color: #ffffff
+        background: #ff0000;
     }
 
     .banner-area {
@@ -137,48 +134,42 @@
 
     .shopnow-btn {
         font-size: 20px;
-        background: #693b9f;
-        color: #f2f2f2;
+        background: #008000;
+        color: #fff;
         border: none;
         padding: 15px 63px;
         border-radius: 20px;
         cursor: pointer;
         font-weight: 600;
         transition: background 0.2s ease;
-        bottom: 23%;
+        bottom: 22%;
         left: 8%;
         position: absolute;
     }
 
     .shopnow-btn:hover {
-        background: #de87ee;
-        color: #ffffff
+        background: #ff0000;
     }
 
     .content-area {
         width: 100%;
         height: 800px;
         position: relative;
-        background: #7d8fba;
-        opacity: 0.9;
+        background: #fff;
         top: 630px;
         z-index: 2;
     }
 
     .content-area h2 {
         text-align: center;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode';
-        font-style: italic;
         font-size: 40px;
         margin: 0;
         padding-top: 30px;
-        letter-spacing: 0px;
-
+        letter-spacing: 4px;
     }
 
     .content-area p {
-        font-style: oblique;
-        padding: 5%;
+        padding: 2%;
         line-height: 30px;
         text-align: justify;
         font-size: 20px;
@@ -187,8 +178,16 @@
 
     main {
         padding: 20px 50px;
+        padding-top: 85px;
     }
 
     main h1 {
         margin-top: 0;
+    }
+
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 90vh;
     }
